# governance-registry

./: .eslintrc.json  .gitignore  .travis.yml  Anchor.toml  CHANGELOG.md  Cargo.toml  README.md  cli.ts  package.json  run-format.sh  run-generate-anchor-types.sh  run-publish.sh  run-release.sh  run-test.sh  tsconfig.json  voter_stake_registry.ts
.cargo/: audit.toml
.github/workflows/: ci-cargo-audit.yml  ci-lint-test.yml  ci-soteria.yml  program.yml
cli/: Cargo.toml
cli/src/: decode.rs  main.rs
examples/: example.ts
programs/governance-registry/: Cargo.toml
programs/governance-registry/src/: access_control.rs  account.rs  context.rs  error.rs  lib.rs  voter_weight_record.rs
programs/governance-registry/tests/: test_basic.rs  test_clawback.rs  test_deposit_cliff.rs  test_deposit_daily_vesting.rs  test_deposit_monthly_vesting.rs  test_deposit_no_locking.rs
programs/governance-registry/tests/program_test/: addin.rs  governance.rs  mod.rs  solana.rs
programs/voter-stake-registry/: Cargo.toml
programs/voter-stake-registry/src/: access_control.rs  context.rs  error.rs  lib.rs
programs/voter-stake-registry/src/events/: mod.rs
programs/voter-stake-registry/src/instructions/: clawback.rs  close_deposit_entry.rs  close_voter.rs  configure_voting_mint.rs  create_deposit_entry.rs  create_exchange_rate.rs  create_registrar.rs  create_voter.rs  deposit.rs  grant.rs  internal_transfer.rs  internal_transfer_locked.rs  internal_transfer_unlocked.rs  log_voter_info.rs  mod.rs  reset_lockup.rs  set_time_offset.rs  update_max_vote_weight.rs  update_voter_weight_record.rs  withdraw.rs
programs/voter-stake-registry/src/state/: deposit_entry.rs  exchange_entry.rs  lockup.rs  mod.rs  registrar.rs  voter.rs  voting_mint_config.rs
programs/voter-stake-registry/tests/: test_all_deposits.rs  test_basic.rs  test_clawback.rs  test_deposit_cliff.rs  test_deposit_constant.rs  test_deposit_daily_vesting.rs  test_deposit_monthly_vesting.rs  test_deposit_no_locking.rs  test_grants.rs  test_internal_transfer.rs  test_log_voter_info.rs  test_reset_lockup.rs  test_voting.rs
programs/voter-stake-registry/tests/program_test/: addin.rs  cookies.rs  governance.rs  mod.rs  solana.rs  utils.rs
src/: client.ts  idl.ts  voter_stake_registry.json  voter_stake_registry.ts
tests/: governance-registry.ts  voter-stake-registry.ts
