[package]
name = "governance-registry"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "governance_registry"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# TODO: use versions after next Anchor publish.
anchor-lang = { git = "https://github.com/project-serum/anchor", branch = "armani/solana" }
anchor-spl = { git = "https://github.com/project-serum/anchor", branch = "armani/solana" }
spl-governance = { git = "https://github.com/solana-labs/solana-program-library", features = ["no-entrypoint"] }
