[package]
name = "governance-registry"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "governance_registry"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
localnet = []

[dependencies]
anchor-lang = "0.18.0"
anchor-spl = { version = "0.18.0", features = ["governance"] }
spl-governance = { git = "https://github.com/solana-labs/solana-program-library", features = ["no-entrypoint"] }
