[package]
name = "voter-stake-registry"
version = "0.1.4"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "voter_stake_registry"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
localnet = []
test-bpf = []

[dependencies]
# a) for deployment use these
anchor-lang = "0.20.1"
anchor-spl = { version = "0.20.1", features = ["governance"]}
# b) while testing, use below dependencies for debugging instead of above ones
# anchor-lang = { git = "https://github.com/microwavedcola1/anchor.git", branch = "master-debug" }
# anchor-spl = { git = "https://github.com/microwavedcola1/anchor.git", branch = "master-debug", features = ["governance"]}

# The rev used for spl-governance must match what the fixture binary
# programs/voter-stake-registry/tests/fixtures/spl_governance.so is built from.
spl-governance = { git = "https://github.com/solana-labs/solana-program-library", rev = "1a0155e34bf96489db2cd498be79ca417c87c09f", features = ["no-entrypoint"] }

# refer solana to the same version anchor-lang 0.20.1 refers to
solana-program = "1.8.5"
static_assertions = "1.1"

[dev-dependencies]
solana-sdk = "1.8.5"
solana-program-test = "1.8.5"
solana-logger = "1.8.5"
spl-token = { version = "^3.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^1.0.3", features = ["no-entrypoint"] }
bytemuck = "^1.7.2"
serde = "^1.0"
bincode = "^1.3.1"
log = "0.4.14"
env_logger = "0.9.0"
base64 = "0.13.0"