[package]
name = "voter-stake-registry"
version = "0.2.1"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "voter_stake_registry"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
localnet = []
test-bpf = []

[dependencies]
# a) for deployment use these
anchor-lang = "0.20.1"
anchor-spl = { version = "0.20.1" }
# b) while testing, use below dependencies for debugging instead of above ones
# anchor-lang = { git = "https://github.com/microwavedcola1/anchor.git", branch = "master-debug" }
# anchor-spl = { git = "https://github.com/microwavedcola1/anchor.git", branch = "master-debug", features = ["governance"]}

# The rev used for spl-governance must match what the fixture binary
# programs/voter-stake-registry/tests/fixtures/spl_governance.so is built from.

bytemuck = "1.9.1"

# spl-governance 2.2.0 TODO: Upgrade Anchor to spl-token 3.3.0 to refernce directly 
spl-governance = { git = "https://github.com/solana-labs/solana-program-library", rev = "4c0bc4c968d5d6feaee18b1c633c636f20d66b15", features = ["no-entrypoint"] }

# spl-governance-addin-api 0.1.0 TODO: Upgrade Anchor to spl-token 3.3.0
spl-governance-addin-api = { git = "https://github.com/solana-labs/solana-program-library", rev = "4c0bc4c968d5d6feaee18b1c633c636f20d66b15" }

# refer solana to the same version anchor-lang 0.20.1 refers to
solana-program = "1.9.5"
static_assertions = "1.1"

[dev-dependencies]
solana-sdk = "1.9.5"
solana-program-test = "1.9.5"
solana-logger = "1.9.5"
spl-token = { version = "^3.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^1.0.3", features = ["no-entrypoint"] }
bytemuck = "^1.7.2"
serde = "^1.0"
bincode = "^1.3.1"
log = "0.4.14"
env_logger = "0.9.0"
base64 = "0.13.0"
